<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.listviewdemo.Instruction" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:clickable="false" 
       		android:cursorVisible="false" 
       		android:focusable="false" 
       		android:focusableInTouchMode="false"
            android:textStyle="bold"
            android:text="@string/intro" />
		<View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:background="@android:color/darker_gray"/>
		
        <TextView
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:clickable="false" 
       		android:cursorVisible="false" 
       		android:focusable="false" 
       		android:focusableInTouchMode="false"
       		android:textStyle="italic"
            android:inputType="textMultiLine"
            android:text="@string/para1" />

            
        <TextView
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:clickable="false" 
       		android:cursorVisible="false" 
       		android:focusable="false" 
       		android:focusableInTouchMode="false"
       		android:textStyle="bold"
            android:text="@string/how" />
        
        <View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:clickable="false" 
       		android:cursorVisible="false" 
       		android:focusable="false" 
       		android:focusableInTouchMode="false"
       		android:textStyle="italic"
            android:inputType="textMultiLine"
            android:text="@string/para2"
            android:paddingBottom="@dimen/activity_vertical_margin"
             />

        		
        <TextView
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textColor="#006400"
            android:gravity="center"
            android:textStyle="bold"
            android:clickable="false" 
       		android:cursorVisible="false" 
       		android:focusable="false" 
       		android:focusableInTouchMode="false"
            android:text="@string/start" >

            
        </TextView>
        
    </LinearLayout>

</RelativeLayout>